Improve Java SE note formatting